# sins

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
sins-cli/: Cargo.toml
sins-cli/src/: main.rs
sins-lib/: Cargo.toml
sins-lib/src/: lib.rs
sins-lib/src/clippy/: mod.rs
