[package]
name = "sins-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.36", features = ["span-locations"] }
syn = { version = "1.0", features = ["full", "visit", "parsing", "printing", "extra-traits"] }

[dev-dependencies]
quote = "1.0.14"
